--- a/src/Components/SimpleSlider/SimpleSlider.module.css
+++ b/src/Components/SimpleSlider/SimpleSlider.module.css
@@ -1,11 +1,18 @@
 .slideshow {
+  max-width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  max-width: 100%;
 }
 
 .slideshowSlider {
   white-space: nowrap;
+  white-space: nowrap;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .slide {
