add placeholder classname to select

--- a/src/Components/Select/Select.module.css
+++ b/src/Components/Select/Select.module.css
@@ -13,6 +13,9 @@
   font-size: 12px;
   background-color: white;
 }
+.selectClassPlaceholder {
+  color: grey;
+}
 .selected {
   width: 100%;
   display: flex;
